# kodzuchi

./: CMakeLists.txt
include/: kodzuchi.h
src/: CMakeLists.txt  decoder.h  encoder.h  kodzuchi.cpp  singlebyte.cpp  singlebyte.h  singlebyte_decoder.cpp  singlebyte_decoder.h  singlebyte_encoder.cpp  singlebyte_encoder.h
src/tables/singlebyte/: hashtable.h  ibm866.h  iso_8859_10.h  iso_8859_13.h  iso_8859_14.h  iso_8859_15.h  iso_8859_16.h  iso_8859_2.h  iso_8859_3.h  iso_8859_4.h  iso_8859_5.h  iso_8859_6.h  iso_8859_7.h  iso_8859_8.h  koi8_r.h  koi8_u.h  macintosh.h  windows_1250.h  windows_1251.h  windows_1252.h  windows_1253.h  windows_1254.h  windows_1255.h  windows_1256.h  windows_1257.h  windows_1258.h  windows_874.h  x_mac_cyrillic.h
tools/: buildhash.sh  buildhash_singlebyte.py
